<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission" translatable="false">com.android.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.android.launcher3.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="application_name">Launcher3</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="widget_adder">Widgets</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="invalid_hotseat_item">This widget is too large for the Favorites tray</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="first_run_cling_description">Make yourself at home.</string>
    <string name="first_run_cling_custom_content_hint"></string>
    <string name="first_run_cling_search_bar_hint"></string>
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_cling_move_item">Touch &amp; hold background to manage wallpaper, widgets and settings.</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_cling_title">Here\'s a folder</string>
    <string name="folder_cling_create_folder">To create one like this, touch &amp; hold an app, then move it over another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="package_state_enqueued">Waiting</string>
    <string name="package_state_downloading">Downloading</string>
    <string name="package_state_installing">Installing</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="package_state_error">Not restored</string>
    <string name="abandoned_clean_all">Remove All</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="dialog_open">Open</string>
    <string name="dialog_about">About Computer</string>
    <string name="dialog_empty">Empty</string>
    <string name="dialog_open_with">Open_with</string>
    <string name="dialog_compress">Compress</string>
    <string name="dialog_uncompress">Uncompress</string>
    <string name="dialog_cut">Cut</string>
    <string name="dialog_copy">Copy</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_property">property</string>
    <string name="dialog_sort">Sort</string>
    <string name="dialog_new_folder">new Folder</string>
    <string name="dialog_dis_setting">Display Settings</string>
    <string name="dialog_change_bgp">Change Background Picture</string>
    <string name="dialog_paste">Paste</string>
    <string name="app_name">OpenthosLauncher</string>
    <string name="my_computer">My Computer</string>
    <string name="recycle">Recycle</string>
    <string name="paste">Paste</string>
    <string name="sort">Sort</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file">New File</string>
    <string name="display_settings">Display Settings</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="open">Open</string>
    <string name="about_computer">About Computer</string>
    <string name="open_way">Open Way</string>
    <string name="compress">Compress</string>
    <string name="decompression">Decompression</string>
    <string name="crop">Crop</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="property">Property</string>
    <string name="clean_recycle">Clean Recycle</string>
    <string name="dialog_delete_text">Are you sure you want to move this file to the Recycle?</string>
    <string name="dialog_direct_delete_text">Are you sure you want to permanently delete?</string>
    <string name="dialog_delete_yes">Yes</string>
    <string name="dialog_delete_no">No</string>
    <string name="dialog_property_title">Propertys</string>
    <string name="dialog_property_file_type">Type of file:</string>
    <string name="dialog_property_open_way">Description:</string>
    <string name="dialog_property_location">Location:</string>
    <string name="dialog_property_size">Size:</string>
    <string name="dialog_property_space_usage">Size on deis:</string>
    <string name="dialog_property_creation_time">Created:</string>
    <string name="dialog_property_modification_time">Modified:</string>
    <string name="dialog_property_access_time">Accessed:</string>
    <string name="dialog_property_confirm">OK</string>
    <string name="dialog_property_cancel">Cancel</string>
    <string name="launcher_tar">tar</string>
    <string name="launcher_tar_gz">tar.gz</string>
    <string name="launcher_tar_bz2">tar.bz2</string>
    <string name="launcher_zip">zip</string>
    <string name="dialog_compress_title">Please select the compression format</string>
    <string name="launcher_txt_info">TXT text document</string>
    <string name="launcher_doc_info">Word document</string>
    <string name="launcher_xls_info">Excel document</string>
    <string name="launcher_ppt_info">PowerPoint document</string>
    <string name="dialog_new_file_title">Please select the format you want to create</string>
</resources>